test/core/e2e/single-acct-custom-domain.integ.snapshot/aws-cdk-vpclattice-e2e-custom-domain-2.template.json
{
 "Resources": {
  "SvcVpc2D143907": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc"
     }
    ]
   }
  },
  "SvcVpcPublicSubnet1Subnet0546E34B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPublicSubnet1RouteTableE6BC1442": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPublicSubnet1RouteTableAssociationCB3E25CC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SvcVpcPublicSubnet1RouteTableE6BC1442"
    },
    "SubnetId": {
     "Ref": "SvcVpcPublicSubnet1Subnet0546E34B"
    }
   }
  },
  "SvcVpcPublicSubnet1DefaultRoute7745BC19": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SvcVpcIGWE8FEF971"
    },
    "RouteTableId": {
     "Ref": "SvcVpcPublicSubnet1RouteTableE6BC1442"
    }
   },
   "DependsOn": [
    "SvcVpcVPCGWB50A0357"
   ]
  },
  "SvcVpcPublicSubnet1EIP6BDA5971": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet1"
     }
    ]
   }
  },
  "SvcVpcPublicSubnet1NATGatewayB6DF0618": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "SvcVpcPublicSubnet1EIP6BDA5971",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "SvcVpcPublicSubnet1Subnet0546E34B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "SvcVpcPublicSubnet1DefaultRoute7745BC19",
    "SvcVpcPublicSubnet1RouteTableAssociationCB3E25CC"
   ]
  },
  "SvcVpcPublicSubnet2SubnetEC6BAF71": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPublicSubnet2RouteTableDE6649DB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPublicSubnet2RouteTableAssociation0F767709": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SvcVpcPublicSubnet2RouteTableDE6649DB"
    },
    "SubnetId": {
     "Ref": "SvcVpcPublicSubnet2SubnetEC6BAF71"
    }
   }
  },
  "SvcVpcPublicSubnet2DefaultRoute97303794": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SvcVpcIGWE8FEF971"
    },
    "RouteTableId": {
     "Ref": "SvcVpcPublicSubnet2RouteTableDE6649DB"
    }
   },
   "DependsOn": [
    "SvcVpcVPCGWB50A0357"
   ]
  },
  "SvcVpcPrivateSubnet1Subnet12B13875": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPrivateSubnet1RouteTable03B4CACA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPrivateSubnet1RouteTableAssociation33396F24": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SvcVpcPrivateSubnet1RouteTable03B4CACA"
    },
    "SubnetId": {
     "Ref": "SvcVpcPrivateSubnet1Subnet12B13875"
    }
   }
  },
  "SvcVpcPrivateSubnet1DefaultRouteE962E0E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SvcVpcPublicSubnet1NATGatewayB6DF0618"
    },
    "RouteTableId": {
     "Ref": "SvcVpcPrivateSubnet1RouteTable03B4CACA"
    }
   }
  },
  "SvcVpcPrivateSubnet2SubnetFB008FE3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPrivateSubnet2RouteTableF9DA1A00": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "SvcVpcPrivateSubnet2RouteTableAssociationE5791A11": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SvcVpcPrivateSubnet2RouteTableF9DA1A00"
    },
    "SubnetId": {
     "Ref": "SvcVpcPrivateSubnet2SubnetFB008FE3"
    }
   }
  },
  "SvcVpcPrivateSubnet2DefaultRoute7293860A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SvcVpcPublicSubnet1NATGatewayB6DF0618"
    },
    "RouteTableId": {
     "Ref": "SvcVpcPrivateSubnet2RouteTableF9DA1A00"
    }
   }
  },
  "SvcVpcIGWE8FEF971": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-vpclattice-e2e-custom-domain-2/SvcVpc"
     }
    ]
   }
  },
  "SvcVpcVPCGWB50A0357": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "SvcVpcIGWE8FEF971"
    },
    "VpcId": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "HostedZoneDB99F866": {
   "Type": "AWS::Route53::HostedZone",
   "Properties": {
    "Name": "cdktests.com.",
    "VPCs": [
     {
      "VPCId": {
       "Ref": "SvcVpc2D143907"
      },
      "VPCRegion": {
       "Ref": "AWS::Region"
      }
     }
    ]
   }
  },
  "Parking6000F0C6": {
   "Type": "AWS::VpcLattice::Service",
   "Properties": {
    "AuthType": "NONE",
    "CustomDomainName": "parking.cdktests.com",
    "DnsEntry": {
     "DomainName": "parking.cdktests.com",
     "HostedZoneId": {
      "Ref": "HostedZoneDB99F866"
     }
    },
    "Name": "parking"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ServiceNetworkEF29AF70": {
   "Type": "AWS::VpcLattice::ServiceNetwork",
   "Properties": {
    "AuthType": "NONE",
    "Name": "superapps-vcnetwork"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ServiceNetworkAssociateVPCc8240702edfd2c4ca6e13febdc97616913390124ebVpcAssociationc84d89812ab1e12f0ce5ffa39cf356ae42a472f5cb430C4D51": {
   "Type": "AWS::VpcLattice::ServiceNetworkVpcAssociation",
   "Properties": {
    "SecurityGroupIds": [],
    "ServiceNetworkIdentifier": {
     "Fn::GetAtt": [
      "ServiceNetworkEF29AF70",
      "Id"
     ]
    },
    "VpcIdentifier": {
     "Ref": "SvcVpc2D143907"
    }
   }
  },
  "ServiceNetworkServiceAssociationc89006d0d173b8c1131acebb1b1662ddf110f2157bLatticeAssociationc828b667565b5e7b158840cca2da68ebaa5da06efdF9C67627": {
   "Type": "AWS::VpcLattice::ServiceNetworkServiceAssociation",
   "Properties": {
    "ServiceIdentifier": {
     "Fn::GetAtt": [
      "Parking6000F0C6",
      "Id"
     ]
    },
    "ServiceNetworkIdentifier": {
     "Fn::GetAtt": [
      "ServiceNetworkEF29AF70",
      "Id"
     ]
    }
   }
  }
 },
 "Outputs": {
  "DnsName": {
   "Value": {
    "Fn::GetAtt": [
     "Parking6000F0C6",
     "DnsEntry.DomainName"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
